[project]
name = "teamzen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "huggingface-hub>=1.8.0",
    "openenv-core>=0.2.3",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers>=5.4.0",
]
